# SpeechSpectrum

./: .gitignore  LICENSE  README.md  pyproject.toml  run_llm_experiment.ipynb  test.ipynb
SpeechSpectrum-Website/: pageBusinessA.html  pageBusinessB.html  pageBusinessC.html  pageLegalA.html  pageMedicalA.html  pageMedicalB.html  pageMedicalC.html  pageMedicalD.html
docs/: CNAME  index.html  pageBusinessA.html  pageBusinessB.html  pageBusinessC.html  pageBusinessD.html  pageLegalA.html  pageLegalB.html  pageLegalC.html  pageLegalD.html  pageMedicalA.html  pageMedicalB.html  pageMedicalC.html  pageMedicalD.html
notebooks/: SpeechSpectrum_Tool.ipynb  get_figs_and_sig_tests.ipynb
src/speechspectrum/: client.py  operations.py
src/speechspectrum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
